--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express-async-handler": "^1.1.4",
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
